@@ -161,6 +161,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -Dmockito.mock-maker=mock-maker-inline</argLine>
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <includes>
                         <include>**/*Test.java</include>
